# grasping_sim

./: Dockerfile  LICENSE  README.md  requirements.txt
cluster_home/: entrypoint.sh  job_sub  train.py
cluster_home/configs/: cylinder.yaml  nocontv3.yaml  nocontv3_singles.yaml  noise_nocontv3.yaml  noisev3.yaml  ppov3.yaml  reacher.yaml  trpov3.yaml  trpov3_2000.yaml  trpov3_singles.yaml  twistftv3.yaml  twistv3.yaml
scripts/: eval_policy_pregrasps  ex_run_locally  grasp_close  iterate_pregrasps  logs_tools  replay_policy  simple_grasp
src/baselines_catkin/: CMakeLists.txt  package.xml  setup.py
src/baselines_catkin/baselines/baselines/common/: distributions.py
src/baselines_catkin/baselines/baselines/ppo1/: mlp_policy.py  pposgd_simple.py
src/baselines_catkin/baselines/baselines/trpo_mpi/: trpo_mpi.py
src/gazebo_grasping/: CMakeLists.txt  README.txt  package.xml  setup.py
src/gazebo_grasping/include/gazebo_grasping/: gazebo_world_iface.h  noise.h
src/gazebo_grasping/models/barrett/: barrett.sdf  model.config
src/gazebo_grasping/models/barrett/mesh/: finger_dist_link_convex.dae  finger_med_link_convex.dae  finger_prox_link_convex.dae  palm_convex.dae
src/gazebo_grasping/models/bottle_poisson_009/: model-1_4.sdf  model.config  pregrasps.pkl  pregrasps_test.pkl
src/gazebo_grasping/models/bottle_poisson_009/mesh/: bottle_poisson_009.dae
src/gazebo_grasping/models/bottle_poisson_047/: model-1_4.sdf  model.config  pregrasps.pkl  pregrasps_test.pkl
src/gazebo_grasping/models/bottle_poisson_047/mesh/: bottle_poisson_047.dae
src/gazebo_grasping/models/bottle_poisson_050/: model-1_4.sdf  model.config  pregrasps.pkl  pregrasps_test.pkl
src/gazebo_grasping/models/bottle_poisson_050/mesh/: bottle_poisson_050.dae
src/gazebo_grasping/models/bowl_poisson_022/: model-1_4.sdf  model.config  pregrasps.pkl  pregrasps_test.pkl
src/gazebo_grasping/models/bowl_poisson_022/mesh/: bowl_poisson_022.dae
src/gazebo_grasping/models/bowl_poisson_025/: model-1_4.sdf  model.config  pregrasps.pkl  pregrasps_test.pkl
src/gazebo_grasping/models/bowl_poisson_025/mesh/: bowl_poisson_025.dae
src/gazebo_grasping/models/cylinder/: model-1_4.sdf  model.config
src/gazebo_grasping/models/cylinder/mesh/: cylinder.dae
src/gazebo_grasping/models/donut_poisson_002/: model-1_4.sdf  model.config  pregrasps.pkl  pregrasps_test.pkl
src/gazebo_grasping/models/donut_poisson_002/mesh/: donut_poisson_002.dae
src/gazebo_grasping/models/drill_poisson_000/: model-1_4.sdf  model.config  pregrasps.pkl  pregrasps_test.pkl
src/gazebo_grasping/models/drill_poisson_000/mesh/: drill_poisson_000.dae
src/gazebo_grasping/models/ground_plane/: model-1_2.sdf  model-1_3.sdf  model-1_4.sdf  model.sdf
src/gazebo_grasping/models/hammer_poisson_013/: model-1_4.sdf  model.config  pregrasps.pkl  pregrasps_test.pkl
src/gazebo_grasping/models/hammer_poisson_013/mesh/: hammer_poisson_013.dae
src/gazebo_grasping/models/jar_poisson_002/: model-1_4.sdf  model.config  pregrasps.pkl  pregrasps_test.pkl
src/gazebo_grasping/models/jar_poisson_002/mesh/: jar_poisson_002.dae
src/gazebo_grasping/models/spray_bottle_poisson_001/: model-1_4.sdf  model.config  pregrasps.pkl  pregrasps_test.pkl
src/gazebo_grasping/models/spray_bottle_poisson_001/mesh/: spray_bottle_poisson_001.dae
src/gazebo_grasping/models/tape_poisson_000/: model-1_4.sdf  model.config  pregrasps.pkl  pregrasps_test.pkl
src/gazebo_grasping/models/tape_poisson_000/mesh/: tape_poisson_000.dae
src/gazebo_grasping/msgs/: CMakeLists.txt  barrett_control.proto  observation.proto  point3d.proto  point_of_interest.proto  world_config.proto
src/gazebo_grasping/src/: gazebo_world_iface.cc  noise.cc  world_plugin.cc
src/gazebo_grasping/worlds/: cylinder.world  empty.world  pregrasps.world  reacher.world
src/grasping_env_catkin/: CMakeLists.txt  package.xml  setup.py
src/grasping_env_catkin/grasping_env/: setup.py
src/grasping_env_catkin/grasping_env/grasping_env/: __init__.py  core.py  grasping_env_cylinder.py  grasping_env_pregrasps.py  grasping_env_reacher.py  sdf_tools.py  utils.py
